--- a/AbstractGarmentFactoryMVC/Views/Indents/Create.cshtml
+++ b/AbstractGarmentFactoryMVC/Views/Indents/Create.cshtml
@@ -28,7 +28,7 @@
         @*@Html.LabelFor(model => model.Condition, htmlAttributes: new { @class = "control-label col-md-2" })*@
         <label class="control-label col-md-2">Клиент</label>
         <div class="col-md-10">
-            @Html.DropDownList("CustomerFIO", ViewBag.Customers as SelectList, new { htmlAttributes = new { @class = "clientList" } })
+            @Html.DropDownList("CustomerFIO", ViewBag.Customers as SelectList, new { @class = "form-control" })
             @*@Html.ValidationMessageFor(model => ViewBag.Customers.CustomerId, "", new { @class = "text-danger" })*@
         </div>
     </div>
@@ -44,7 +44,7 @@
     <div class="form-group">   
         <label class="control-label col-md-2">Изделие</label>
         <div class="col-md-10">
-            @Html.DropDownList("FabricName", ViewBag.Fabrics as SelectList, new { htmlAttributes = new { @class = "clientList" } })            
+            @Html.DropDownList("FabricName", ViewBag.Fabrics as SelectList, new { @class = "form-control" })            
         </div>
     </div>
 
@@ -72,21 +72,21 @@
         </div>
     </div>
 
-    <div class="form-group">
+    @*<div class="form-group">
         @Html.LabelFor(model => model.DateCreate, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.DateCreate, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.DateCreate, "", new { @class = "text-danger" })
         </div>
-    </div>
+    </div>*@
 
-    <div class="form-group">
+    @*<div class="form-group">
         @Html.LabelFor(model => model.DateImplement, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.DateImplement, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.DateImplement, "", new { @class = "text-danger" })
         </div>
-    </div>
+    </div>*@
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
