--- a/AbstractGarmentFactoryMVC/Views/Indents/Details.cshtml
+++ b/AbstractGarmentFactoryMVC/Views/Indents/Details.cshtml
@@ -1,10 +1,10 @@
 ﻿@model AbstractGarmentFactoryModel.Indent
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Детали заказа";
 }
 
-<h2>Details</h2>
+<h2>Детали заказа</h2>
 
 <div>
     <h4>Indent</h4>
