--- a/AbstractGarmentFactoryMVC/Views/Indents/Edit.cshtml
+++ b/AbstractGarmentFactoryMVC/Views/Indents/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model AbstractGarmentFactoryModel.Indent
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Редактировать";
 }
 
-<h2>Edit</h2>
+<h2>Редактировать</h2>
 
 
 @using (Html.BeginForm())
