--- a/AbstractGarmentFactoryMVC/Views/Shared/_Layout.cshtml
+++ b/AbstractGarmentFactoryMVC/Views/Shared/_Layout.cshtml
@@ -17,13 +17,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Имя приложения", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Главная", "Index", "Indents", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Домашняя страница", "Index", "Home")</li>
-                    <li>@Html.ActionLink("О программе", "About", "Home")</li>
-                    <li>@Html.ActionLink("Контакт", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Клиенты", "Index", "Customers")</li>
+                    <li>@Html.ActionLink("Куртки", "Index", "Fabrics")</li>
+                    <li>@Html.ActionLink("Расходные материалы", "Index", "Stockings")</li>
                 </ul>
             </div>
         </div>
