Настроена шапка в таблице заказов

--- a/AbstractGarmentFactoryMVC/Views/Indents/Index.cshtml
+++ b/AbstractGarmentFactoryMVC/Views/Indents/Index.cshtml
@@ -15,11 +15,11 @@
     <tr>
         <th>
             @*@Html.DisplayNameFor(model => model.CustomerId)*@
-            <label class="control-label col-md-2">Клиент</label>
+            Клиент
         </th>
         <th>
             @*@Html.DisplayNameFor(model => model.FabricId)*@
-            <label class="control-label col-md-2">Товар</label>
+            Товар
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Amount)
