--- a/AbstractGarmentFactoryMVC/Views/Customers/Delete.cshtml
+++ b/AbstractGarmentFactoryMVC/Views/Customers/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model AbstractGarmentFactoryModel.Customer
+﻿@model AbstractGarmentFactoryServiceDAL.BindingModel.CustomerBindingModel
 
 @{
     ViewBag.Title = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Customer</h4>
+    <h4>CutstomerBindingModel</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
