--- a/AbstractGarmentFactoryMVC/Views/Customers/Details.cshtml
+++ b/AbstractGarmentFactoryMVC/Views/Customers/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model AbstractGarmentFactoryModel.Customer
+﻿@model AbstractGarmentFactoryServiceDAL.BindingModel.CustomerBindingModel
 
 @{
     ViewBag.Title = "Details";
@@ -7,7 +7,7 @@
 <h2>Details</h2>
 
 <div>
-    <h4>Customer</h4>
+    <h4>CutstomerBindingModel</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
