--- a/AbstractGarmentFactoryMVC/Views/Customers/Edit.cshtml
+++ b/AbstractGarmentFactoryMVC/Views/Customers/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model AbstractGarmentFactoryModel.Customer
+﻿@model AbstractGarmentFactoryServiceDAL.BindingModel.CutstomerBindingModel
 
 @{
     ViewBag.Title = "Edit";
@@ -7,16 +7,14 @@
 <h2>Edit</h2>
 
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Edit", "Customers", FormMethod.Post))
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Customer</h4>
+        <h4>CutstomerBindingModel</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.Id)
-
         <div class="form-group">
             @Html.LabelFor(model => model.CustomerFIO, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
