--- a/AbstractGarmentFactoryMVC/Views/Customers/Index.cshtml
+++ b/AbstractGarmentFactoryMVC/Views/Customers/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<AbstractGarmentFactoryModel.Customer>
+﻿@model IEnumerable<AbstractGarmentFactoryServiceDAL.ViewModel.CustomerViewModel>
 
 @{
     ViewBag.Title = "Index";
