--- a/AbstractGarmentFactoryMVC/Views/Indents/Create.cshtml
+++ b/AbstractGarmentFactoryMVC/Views/Indents/Create.cshtml
@@ -1,6 +1,4 @@
-﻿@using AbstractGarmentFactoryModel;
-
-@model AbstractGarmentFactoryModel.Indent
+﻿@model AbstractGarmentFactoryServiceDAL.BindingModel.IndentBindingModel
 
 @{
     ViewBag.Title = "Create";
@@ -9,26 +7,29 @@
 <h2>Create</h2>
 
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("CreatePost", "Indents", FormMethod.Post))
 {
     @Html.AntiForgeryToken()
 
 <div class="form-horizontal">
-    <h4>Indent</h4>
+    <h4>IndentBindingModel</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-    <div class="form-group">        
-        <label class="control-label col-md-2">Клиент</label>
+
+
+    <div class="form-group">
+        <label class="control-label col-md-2">Изделие</label>
         <div class="col-md-10">
-            @Html.DropDownList("CustomerFIO", ViewBag.Customers as SelectList, new { @class = "form-control" })            
+            @Html.DropDownList("Id", ViewBag.Fabrics as SelectList, new { @class = "form-control" })
         </div>
     </div>
 
-    <div class="form-group">   
-        <label class="control-label col-md-2">Изделие</label>
+    <div class="form-group">
+        <label class="control-label col-md-2">Клиент</label>
+
         <div class="col-md-10">
-            @Html.DropDownList("FabricName", ViewBag.Fabrics as SelectList, new { @class = "form-control" })            
+            @Html.DropDownList("Id", ViewBag.Customers as SelectList, new { @class = "form-control" })
         </div>
     </div>
 
@@ -37,16 +38,6 @@
         <div class="col-md-10">
             @Html.EditorFor(model => model.Amount, new { htmlAttributes = new { @class = "form-control", @Value = "1", @min = "1" } })
             @Html.ValidationMessageFor(model => model.Amount, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-  
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.Condition, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EnumDropDownListFor(model => model.Condition, htmlAttributes: new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.Condition, "", new { @class = "text-danger" })
         </div>
     </div>
 
@@ -66,22 +57,3 @@
     @Scripts.Render("~/bundles/jqueryval")
 }
 
-<script src="~/Scripts/jquery-3.3.1.js"></script>
-
-<script>
-    $('#Amount').blur(function () {
-        $("#Total").val(parseInt($("#Amount").val()) * @{
-
-            if (Request.Form["FabricName"] != null)
-            {
-                string selectedFabricName = Request.Form["FabricName"].ToString();
-                var fabric = (ViewBag.FabricsList as List<Fabric>).FirstOrDefault(x => x.Id == int.Parse(selectedFabricName));
-
-                if (fabric != null)
-                {
-                    @fabric.Value;
-                }
-            }
-       });
-    });
-</script>
