--- a/AbstractGarmentFactoryMVC/Views/Indents/Details.cshtml
+++ b/AbstractGarmentFactoryMVC/Views/Indents/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model AbstractGarmentFactoryModel.Indent
+﻿@model AbstractGarmentFactoryServiceDAL.BindingModel.IndentBindingModel
 
 @{
     ViewBag.Title = "Детали заказа";
@@ -7,7 +7,7 @@
 <h2>Детали заказа</h2>
 
 <div>
-    <h4>Indent</h4>
+    <h4>IndentBindingModel</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
