--- a/AbstractGarmentFactoryMVC/Views/Stockings/Index.cshtml
+++ b/AbstractGarmentFactoryMVC/Views/Stockings/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<AbstractGarmentFactoryModel.Stocking>
+﻿@model IEnumerable<AbstractGarmentFactoryServiceDAL.ViewModel.StockingViewModel>
 
 @{
     ViewBag.Title = "Index";
