--- a/AbstractGarmentFactoryMVC/Views/Fabrics/AddStocking.cshtml
+++ b/AbstractGarmentFactoryMVC/Views/Fabrics/AddStocking.cshtml
@@ -1,4 +1,4 @@
-﻿@model AbstractGarmentFactoryModel.Fabric
+﻿@model AbstractGarmentFactoryServiceDAL.ViewModel.FabricStockingViewModel
 
 @{
     ViewBag.Title = "Create";
@@ -7,27 +7,26 @@
 <h2>Create</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("AddStockingPost", "Fabrics", FormMethod.Post)) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Fabric</h4>
+        <h4>FabricStockingViewModel</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.FabricName, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.StockingName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.FabricName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.FabricName, "", new { @class = "text-danger" })
+                @Html.DropDownList("Id", ViewBag.Stockings as SelectList)
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Value, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Amount, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Value, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Value, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Amount, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Amount, "", new { @class = "text-danger" })
             </div>
         </div>
 
