--- a/AbstractGarmentFactoryMVC/Views/Fabrics/Edit.cshtml
+++ b/AbstractGarmentFactoryMVC/Views/Fabrics/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model AbstractGarmentFactoryModel.Fabric
+﻿@model AbstractGarmentFactoryServiceDAL.ViewModel.FabricStockingViewModel
 
 @{
     ViewBag.Title = "Edit";
@@ -10,9 +10,9 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
-        <h4>Fabric</h4>
+        <h4>FabricStockingViewModel</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
