--- a/AbstractGarmentFactoryMVC/Views/Indents/Delete.cshtml
+++ b/AbstractGarmentFactoryMVC/Views/Indents/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model AbstractGarmentFactoryModel.Indent
+﻿@model AbstractGarmentFactoryServiceDAL.BindingModel.IndentBindingModel
 
 @{
     ViewBag.Title = "Удалить";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Indent</h4>
+    <h4>IndentBindingModel</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
