--- a/AbstractGarmentFactoryMVC/Views/Indents/Edit.cshtml
+++ b/AbstractGarmentFactoryMVC/Views/Indents/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model AbstractGarmentFactoryModel.Indent
+﻿@model AbstractGarmentFactoryServiceDAL.BindingModel.IndentBindingModel
 
 @{
     ViewBag.Title = "Редактировать";
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Indent</h4>
+        <h4>IndentBindingModel</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
