--- a/AbstractGarmentFactoryMVC/Views/Stockings/Create.cshtml
+++ b/AbstractGarmentFactoryMVC/Views/Stockings/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model AbstractGarmentFactoryModel.Stocking
+﻿@model AbstractGarmentFactoryServiceDAL.BindingModel.StockingBindingModel
 
 @{
     ViewBag.Title = "Create";
@@ -7,12 +7,12 @@
 <h2>Create</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("CreatePost", "Stockings", FormMethod.Post)) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Stocking</h4>
+        <h4>StockingBindingModel</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
