--- a/AbstractGarmentFactoryMVC/Views/Stockings/Delete.cshtml
+++ b/AbstractGarmentFactoryMVC/Views/Stockings/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model AbstractGarmentFactoryModel.Stocking
+﻿@model AbstractGarmentFactoryServiceDAL.BindingModel.StockingBindingModel
 
 @{
     ViewBag.Title = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Stocking</h4>
+    <h4>StockingBindingModel</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
