--- a/AbstractGarmentFactoryMVC/Views/Stockings/Details.cshtml
+++ b/AbstractGarmentFactoryMVC/Views/Stockings/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model AbstractGarmentFactoryModel.Stocking
+﻿@model AbstractGarmentFactoryServiceDAL.BindingModel.StockingBindingModel
 
 @{
     ViewBag.Title = "Details";
@@ -7,7 +7,7 @@
 <h2>Details</h2>
 
 <div>
-    <h4>Stocking</h4>
+    <h4>StockingBindingModel</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
