--- a/AbstractGarmentFactoryMVC/Views/Indents/Index.cshtml
+++ b/AbstractGarmentFactoryMVC/Views/Indents/Index.cshtml
@@ -5,6 +5,7 @@
 }
 
 <h2>Заказы</h2>
+@Html.ValidationSummary(true)
 
 <p>
     @Html.ActionLink("Create New", "Create")
@@ -34,38 +35,37 @@
         </th>
         <th></th>
     </tr>
-
     @foreach (var item in Model)
     {
-    <tr>
-        <td>
-            @Html.DisplayNameFor(model => model.CustomerFIO)
-        </td>
-        <td>
-            @Html.DisplayNameFor(model => model.FabricName)
-        </td>
-        <td>
-            @Html.DisplayNameFor(model => model.Amount)
-        </td>
-        <td>
-            @Html.DisplayNameFor(model => model.Total)
-        </td>
-        <td>
-            @Html.DisplayNameFor(model => model.Condition)
-        </td>
-        <td>
-            @Html.DisplayNameFor(model => model.DateCreate)
-        </td>
-        <td>
-            @Html.DisplayNameFor(model => model.DateImplement)
-        </td>
-        <td></td>
-        <td>
-            @Html.ActionLink("Отдать на выполнение", "SetStatus", new { id = item.Id, status = "Processing" }) |
-            @Html.ActionLink("Заказ готов", "SetStatus", new { id = item.Id, status = "Ready" }) |
-            @Html.ActionLink("Заказ оплачен", "SetStatus", new { id = item.Id, status = "Paid" })
-        </td>
-    </tr>
+        <tr>
+            <td>
+                @Html.DisplayFor(model => item.CustomerFIO)
+            </td>
+            <td>
+                @Html.DisplayFor(model => item.FabricName)
+            </td>
+            <td>
+                @Html.DisplayFor(model => item.Amount)
+            </td>
+            <td>
+                @Html.DisplayFor(model => item.Total)
+            </td>
+            <td>
+                @Html.DisplayFor(model => item.Condition)
+            </td>
+            <td>
+                @Html.DisplayFor(model => item.DateCreate)
+            </td>
+            <td>
+                @Html.DisplayFor(model => item.DateImplement)
+            </td>
+            <td></td>
+            <td>
+                @Html.ActionLink("Отдать на выполнение", "SetStatus", new { id = item.Id, status = "Processing" }) |
+                @Html.ActionLink("Заказ готов", "SetStatus", new { id = item.Id, status = "Ready" }) |
+                @Html.ActionLink("Заказ оплачен", "SetStatus", new { id = item.Id, status = "Paid" })
+            </td>
+        </tr>
     }
 
 </table>
