--- a/AbstractGarmentFactoryMVC/Views/Shared/_Layout.cshtml
+++ b/AbstractGarmentFactoryMVC/Views/Shared/_Layout.cshtml
@@ -24,6 +24,8 @@
                     <li>@Html.ActionLink("Клиенты", "Index", "Customers")</li>
                     <li>@Html.ActionLink("Куртки", "Index", "Fabrics")</li>
                     <li>@Html.ActionLink("Расходные материалы", "Index", "Stockings")</li>
+                    <li>@Html.ActionLink("Склады", "List", "Storages")</li>
+                    <li>@Html.ActionLink("Пополнить склад", "Index", "AddStorage")</li>
                 </ul>
             </div>
         </div>
