--- a/AbstractGarmentFactoryMVC/Views/Indents/Index.cshtml
+++ b/AbstractGarmentFactoryMVC/Views/Indents/Index.cshtml
@@ -5,7 +5,8 @@
 }
 
 <h2>Заказы</h2>
-@Html.ValidationSummary(true)
+@Html.ValidationSummary(false)
+<p>@ViewBag.ErrorMessage</p>
 
 <p>
     @Html.ActionLink("Create New", "Create")
